[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.0.0",
    "black>=23.1.0",
    "labbench>=0.23.4",
    "bokeh~=2.4",
]

[tool.pdm.build]
editable-backend = "src"

[project]
name = "sea_ingest"
version = "0.2"
description = "quick load and aggregate for low-level 'seamf' SEA sensor output data files"
authors = [
    {name = "Dan Kuester", email = "daniel.kuester@nist.gov"},
]
dependencies = [
    "pyarrow>=11.0.0",
    "pandas>=1.5.3",
    "methodtools>=0.4.7",
    "frozendict>=2.3.4",
    "quickle>=0.4.0",
    "natsort>=8.2.0",
    "msgpack>=1.0.4",
    "eliot>=1.14.0",
    "distributed>=2023.2.1",
    "dask[complete]>=2023.3.0",
    "lz4>=4.3.2",
    "matplotlib<3.7,>=3.6",
    "timezonefinder>=6.0.2",
    "numpy<1.24,>=1.23",
]
requires-python = ">=3.8,<3.11"
license = {file = "LICENSE.md"}
