[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "jupyter>=1.0",
    "black>=23.0",
    "labbench>=0.23.4",
    "bokeh",
    "line-profiler>=4.0.3",
]

[tool.pdm.build]
package-dir = "src"
includes = ["src/sea_ingest"]
excludes = ["./**/.git","**/__pycache__"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "src/sea_ingest/__init__.py"

[project]
name = "sea_ingest"
dynamic = ["version"]
description = "quick load and aggregate for low-level 'seamf' SEA sensor output data files"
authors = [
    {name = "Dan Kuester", email = "daniel.kuester@nist.gov"},
]
dependencies = [
    "pyarrow",
    "pandas>=1.4,<2",
    "methodtools>=0.4",
    "frozendict>=2.3",
    "natsort>=8.0",
    "msgpack>=1.0",
    "eliot>=1.14.0",
    "distributed>=2023.2.1",
    "dask[complete]>=2023.3.0",
    "lz4>=4.3.2",
    "matplotlib>=3.6",
    "timezonefinder>=6.0.2",
    "numpy>=1.19",
    "msgspec>=0.15",
    "line-profiler>=4.0.3",
]
requires-python = ">=3.9,<3.12"
license = {file = "LICENSE.md"}
