[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
includes = ["src/sea_ingest"]

[tool.hatch.version]
path = "src/sea_ingest/__init__.py"

[project]
name = "sea_ingest"
dynamic = ["version"]
description = "quick load and aggregate for low-level 'seamf' SEA sensor output data files"
readme = "README.md"
requires-python = ">=3.9,<3.10"
license = {file = "LICENSE.md"}
authors = [
    {name = "Dan Kuester", email = "daniel.kuester@nist.gov"},
]
dependencies = [
    "pyarrow",
    "pandas>=1.4,<2",
    "methodtools>=0.4",
    "frozendict>=2.3",
    "natsort>=8.0",
    "msgpack>=1.0",
    "eliot>=1.14.0",
    "distributed>=2023.2.1",
    "dask[complete]>=2023.3.0",
    "lz4>=4.3.2",
    "matplotlib>=3.6",
    "timezonefinder>=6.0.2",
    "numpy>=1.19,<2",
    "msgspec>=0.15",
    "line-profiler>=4.0.3",
]
[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "black>=23.0",
    "labbench>=0.23.4",
    "bokeh",
    "line-profiler>=4.0.3",
    "hatchling",
    "tox",
    "pytest",
]

[tool.tox]
min_version = "4.21.1"
env_list = ["3.9", "3.10", "3.11"]
skip_missing_interpreters = true

[tool.tox.env.testenv]
description = "Run tests with pytest and generate coverage report"
extras = "tests"
commands = [
    "pytest",
    "--cov-report=term-missing",
    "--no-cov-on-fail",
    "--cov",
    { replace = "posargs", extend = true },
]
